--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "popper.js": "^1.12.9",
     "vue": "^2.5.3",
     "vue-router": "^3.0.1",
+    "vuetify": "^0.17.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
